--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
 <head>
 <meta charset="utf-8"/>
 
-<script src="all.js"></script>
 <!--
+<script src="all.js"></script>
+-->
 <script src="libgeom.js/mat4.js"></script>
 <script src="libgeom.js/math.js"></script>
 <script src="libgeom.js/mesh.js"></script>
 <script src="libgeom.js/geom.js"></script>
+<script src="libgeom.js/manifold.js"></script>
+<script src="libgeom.js/modeler.js"></script>
 <script src="libgeom.js/mouse.js"></script>
 <script src="libgeom.js/camera.js"></script>
 <script src="libgeom.js/select.js"></script>
 <script src="render.js"></script>
 <script src="main.js"></script>
--->
+
 
 <script id="flipnormalshader" type="x-shader/x-vertex">
 uniform mat4 mvp_matrix;
